# ChangeLog for net-dns/openresolv
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/openresolv/ChangeLog,v 1.30 2009/02/19 11:05:37 armin76 Exp $

*openresolv-2.0.1 (19 Feb 2009)

  19 Feb 2009; Raúl Porcel <armin76@gentoo.org> -openresolv-1.3.ebuild,
  -openresolv-1.5.1.ebuild, -openresolv-1.7.1.ebuild,
  -openresolv-1.8.ebuild, -openresolv-1.9.ebuild, +openresolv-2.0.1.ebuild:
  Version bump

  26 Nov 2008; Brent Baude <ranger@gentoo.org> openresolv-2.0.ebuild:
  stable ppc64, bug 246537

  21 Nov 2008; Jeroen Roovers <jer@gentoo.org> openresolv-2.0.ebuild:
  Stable for HPPA (bug #246537).

  16 Nov 2008; Markus Meier <maekke@gentoo.org> openresolv-2.0.ebuild:
  amd64 stable, bug #246537

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  openresolv-2.0.ebuild:
  ppc stable, bug #246537

  14 Nov 2008; Raúl Porcel <armin76@gentoo.org> openresolv-2.0.ebuild:
  alpha/arm/ia64/x86 stable wrt #246537

  12 Nov 2008; Ferris McCormick <fmccor@gentoo.org> openresolv-2.0.ebuild:
  Sparc stable and HOMEPAGE, SRC_URI updated, Bug #246537.

*openresolv-2.0 (03 Oct 2008)

  03 Oct 2008; Raúl Porcel <armin76@gentoo.org> +openresolv-2.0.ebuild:
  Version bump

*openresolv-1.9 (23 Sep 2008)

  23 Sep 2008; Raúl Porcel <armin76@gentoo.org> +openresolv-1.9.ebuild:
  Version bump

*openresolv-1.8 (10 Sep 2008)

  10 Sep 2008; Raúl Porcel <armin76@gentoo.org> -openresolv-1.1.ebuild,
  -openresolv-1.5.ebuild, -openresolv-1.6.ebuild, -openresolv-1.7.ebuild,
  +openresolv-1.8.ebuild:
  Version bump

*openresolv-1.7.1 (29 Aug 2008)

  29 Aug 2008; Raúl Porcel <armin76@gentoo.org> +openresolv-1.7.1.ebuild:
  Version bump

*openresolv-1.7 (24 Aug 2008)

  24 Aug 2008; Raúl Porcel <armin76@gentoo.org> +openresolv-1.7.ebuild:
  Version bump

*openresolv-1.6 (21 Aug 2008)

  21 Aug 2008; Jesus Rivero <neurogeek@gentoo.org> +openresolv-1.6.ebuild:
  Bump to 1.6
