@@ -1,6 +1,8 @@
 DIST openresolv-2.0.1.tar.bz2 8898 RMD160 69b052fca48e27ba62f95f6a3ab46cb146d4dc3c SHA1 38ff27a8e26405b20f3b242cf1c0315c9edc7c7b SHA256 97437dd7545554f7a2e101dffeea7501d69de58359dab54161f0838fc0dff7c5
 DIST openresolv-2.0.tar.bz2 9211 RMD160 fdac1ae91c6ee5e36ae809570aae3d3310124b30 SHA1 91cbbcae79686ae2b661e8e2dcf461809e9e200e SHA256 6f32ce4ada191019188b2bdd1a6440052c25305ceb67b29833bd8d83da98adf9
+DIST openresolv-3.0.tar.bz2 9156 RMD160 28caf8c8b561268336f6f42ff73f18d30df71719 SHA1 ed35f88680d5f104a560c28f675c4e747ee518b4 SHA256 e4f9e3511792a277f886a53698ffc5075c5d5e6e0687dc765f59975ad642859c
 EBUILD openresolv-2.0.1.ebuild 1100 RMD160 1ad52c7b36151b496ffeba202711b2079c9e75c0 SHA1 7612592b189bd04d22a3c2630acd27fbefc4fb45 SHA256 b3b85798179c826bbf92f609de3be8c2dbdc29f9ee15901d48388c7c93b35e4a
 EBUILD openresolv-2.0.ebuild 1085 RMD160 dbe79c87069109b96a10adbabc701e5e56c1c240 SHA1 d9a44561ff809f36fd0f267c4e7d695c5947d0b3 SHA256 2d1426247dbbe0c7f04086f842a233031385ad8a3ad7ea780f2959cfc8f656d7
-MISC ChangeLog 3821 RMD160 66cfe7650a30918805cf0b9be6b096f6ab112002 SHA1 0d3e01dd9c38f52e3a698ca0a5c8b4eb487ef20f SHA256 34b3d9c5b9fb90b316be6b45e6be2b75e9989f36ab6bdd56dffd9cd68979e03d
+EBUILD openresolv-3.0.ebuild 1349 RMD160 4ba2d82b2668ad64517c6f9900047ef40b026d6e SHA1 5c3ba7ed22082d4c9272c320fa3b671ecd17e623 SHA256 5d4e3fb32411e9c7721b54cf93f3fc6f19ddabc37f8976b3e2cffb10dfe6aabd
+MISC ChangeLog 3941 RMD160 6376f2bd76f9068a22e8b18aa550dc3c493465a5 SHA1 900f31ab8301ab81c79558e7ae0fd496fbd7350f SHA256 efc96a57d2116f9e129938a152df9e396fe55950c805ca2426ea3356fde2d6e0
 MISC metadata.xml 315 RMD160 22169f34ce4339237cd154625165db8392a2625e SHA1 c577e94a97b82c2d67790e2b3f65a9f4bc1c919e SHA256 535c23e2542894c12240ece5716ec2138be18fb8a116c9b5e538ce6b41bce28a
