@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/openresolv
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/openresolv/ChangeLog,v 1.30 2009/02/19 11:05:37 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/openresolv/ChangeLog,v 1.31 2009/03/17 10:07:21 armin76 Exp $
+
+*openresolv-3.0 (17 Mar 2009)
+
+  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> +openresolv-3.0.ebuild:
+  Version bump
 
 *openresolv-2.0.1 (19 Feb 2009)
 
